--- a/periodic_bc/periodic_elasticity.ipynb
+++ b/periodic_bc/periodic_elasticity.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "2ecd1ff9",
    "metadata": {},
    "outputs": [],
@@ -85,11 +85,11 @@
     "import numpy as np\n",
     "from mpi4py import MPI\n",
     "import gmsh\n",
+    "\n",
     "import ufl\n",
-    "# from dolfinx import fem, io\n",
     "from dolfinx import fem, io\n",
     "import dolfinx.fem.petsc\n",
-    "from dolfinx.io.gmshio import model_to_mesh\n",
+    "from dolfinx.io.gmsh import model_to_mesh\n",
     "import dolfinx_mpc.utils\n",
     "from dolfinx_mpc import LinearProblem\n",
     "\n",
@@ -147,14 +147,14 @@
       "Info    : [ 90%] Meshing curve 18 (Line)\n",
       "Info    : [ 90%] Meshing curve 19 (Line)\n",
       "Info    : [100%] Meshing curve 20 (Line)\n",
-      "Info    : Done meshing 1D (Wall 0.000738401s, CPU 0.000662s)\n",
+      "Info    : Done meshing 1D (Wall 0.000593201s, CPU 0.000391s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : [  0%] Meshing surface 1 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 30%] Meshing surface 2 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 50%] Meshing surface 3 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 70%] Meshing surface 4 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 90%] Meshing surface 5 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0359043s, CPU 0.036329s)\n",
+      "Info    : Done meshing 2D (Wall 0.0338031s, CPU 0.029846s)\n",
       "Info    : 2679 nodes 5432 elements\n"
      ]
     }
@@ -202,30 +202,33 @@
     "# gmsh에서 만든 메쉬 정보를 dolfinx로 변환하여 domain, cells, facets 객체를 생성. 자동으로 메쉬를 분산처리하여 각 rank에 domain, cells, facets 객체를 생성\n",
     "# domain : Mesh 객체 / cells : MeshTags 객체 (domain과 같은 차원의 element마다 부여된) / facets : MeshTags 객체 (domain보다 한 차원 아래 차원의 객체에 부여된)\n",
     "# 자동으로 physical group tag가 부여된 elements들만 dolfinx로 넘겨짐. physical group tag가 부여되지 않은 나머지 elements들은 dolfinx로 넘겨지지 않음.\n",
-    "domain, cells, facets = model_to_mesh(gmsh.model, mesh_comm, model_rank, gdim=gdim)\n",
+    "mesh, tag_cell, tag_facet, *_ = model_to_mesh(gmsh.model, mesh_comm, model_rank, gdim=gdim)\n",
+    "domain = mesh\n",
+    "cells = tag_cell\n",
+    "facets = tag_facet\n",
     "\n",
     "gmsh.finalize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "id": "90fb3bcf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<dolfinx.mesh.MeshTags at 0x7f9a14556550>"
+       "<dolfinx.mesh.MeshTags at 0x741db06d6490>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cells"
+    "meshdata[2]"
    ]
   },
   {
@@ -645,7 +648,7 @@
    "formats": "md:myst,ipynb"
   },
   "kernelspec": {
-   "display_name": "general_purpose",
+   "display_name": "fenicsx-env",
    "language": "python",
    "name": "python3"
   },
@@ -659,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.12"
   }
  },
  "nbformat": 4,
