--- a/periodic_bc/periodic_elasticity.ipynb
+++ b/periodic_bc/periodic_elasticity.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "63267225",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2ecd1ff9",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c83a744d",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5dabcb1e",
    "metadata": {
     "tags": [
@@ -156,14 +156,14 @@
       "Info    : [ 90%] Meshing curve 18 (Line)\n",
       "Info    : [ 90%] Meshing curve 19 (Line)\n",
       "Info    : [100%] Meshing curve 20 (Line)\n",
-      "Info    : Done meshing 1D (Wall 0.00090158s, CPU 0.000503s)\n",
+      "Info    : Done meshing 1D (Wall 0.00132972s, CPU 0.00156s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : [  0%] Meshing surface 1 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 30%] Meshing surface 2 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 50%] Meshing surface 3 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 70%] Meshing surface 4 (Plane, Frontal-Delaunay)\n",
       "Info    : [ 90%] Meshing surface 5 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0343018s, CPU 0.036481s)\n",
+      "Info    : Done meshing 2D (Wall 0.0757387s, CPU 0.074887s)\n",
       "Info    : 2679 nodes 5432 elements\n"
      ]
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "68ae2f71",
    "metadata": {},
    "outputs": [
@@ -231,12 +231,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_300340/1011137893.py:11: UserWarning: Failed to use notebook backend: \n",
+      "/home/chiyoung0/miniconda3/envs/fenicsx-env/lib/python3.13/site-packages/pyvista/jupyter/notebook.py:56: UserWarning: Failed to use notebook backend: \n",
       "\n",
       "No module named 'trame'\n",
       "\n",
       "Falling back to a static output.\n",
-      "  pl.show() # 플로터 표시\n"
+      "  warnings.warn(\n"
      ]
     },
     {
@@ -270,12 +270,12 @@
    "id": "7c580a4e",
    "metadata": {},
    "source": [
-    "We compute the unit cell volume from the mesh for verification:"
+    "잘 메쉬가 됐는지 전체 도메인 면적 계산함 해보자. 면적은 1 X sqrt(3)*.5 = 0.866 와 같아야 한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "b975b946",
    "metadata": {
     "lines_to_next_cell": 2
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f2c5f8e7",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f23deb98",
    "metadata": {},
    "outputs": [],
@@ -402,12 +402,12 @@
     "We must now define the periodic boundary conditions for the fluctuation field. For that, we make use of `dolfinx_mpc` providing a `MultiPointConstraint` object which can account for periodicity conditions. Note that periodic conditions do not fix rigid body translations. To remove them we choose here, for simplicity, to fix the displacement of the single point of coordinate `(0, 0)`. An alternative can consist of introducing constant Lagrange multipliers as discussed in the legacy demo. This solution requires however to use `Real` elements which require special care and are currently available in the `scifem` package https://github.com/scientificcomputing/scifem.\n",
     "- - - - - - - - - - - - - - - -- - - - - - - -- - - - - - - -- - - - - - - -\n",
     "<해석>  \n",
-    "이제 주기 경계조건을 fluctuation displacement field에 줘보자. 이를 위해 `dolfinx_mpc` 라이브러리에서 제공하는 `MultiPointConstraint` 객체를 사용해야 한다. 참고로 주기 조건만 주면은 강체 운동을 막을 수 없다는 걸 기억하자. 강체 운동을 막으려면 반드시 Dirichelt 구속 조건을 어딘가에 줘야 하고 이 문제에서는 (0, 0) 점에 줄 거다."
+    "이제 주기 경계조건을 fluctuation displacement field에 줘보자. 이를 위해 `dolfinx_mpc` 라이브러리에서 제공하는 `MultiPointConstraint` 객체를 사용해야 한다. 참고로 주기 조건만 주면은 강체 운동을 막을 수 없다는 걸 기억하자. 강체 운동을 막으려면 반드시 Dirichelt 구속 조건을 어딘가에 줘야 하고 이 문제에서는 (0, 0) 점에 줄 거다. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e8969dfa",
    "metadata": {
     "lines_to_next_cell": 2
@@ -439,20 +439,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "762dc0a9",
+   "metadata": {},
+   "source": [
+    "먼저 기생성한 function space V에 대해 정의된 MultiPointConstraint 객체인 `mpc`를 설명할 거다. `mpc`의 클래스 메서드인 `create_periodic_constraint_topological`이 마주보는 boundary 위의 dofs를 서로 연결시켜줄 거다. 예를 들어, tag `2`인 unit cell의 우변에 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b9f14691",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 2번 Tag의 facets entity에 위치한 state variable의 DOFs를 기준으로 마주보는 변에 위치한 state variable의 DOFs를 periodic하게 묶는 함수 정의.\n",
     "def periodic_relation_left_right(x):\n",
-    "    out_x = np.zeros(x.shape)\n",
-    "    out_x[0] = x[0] - a1[0]\n",
+    "    '''\n",
+    "    x : 2번 Tag의 facets entity에 속한 state variable DOFs의 좌표 배열. \n",
+    "    \n",
+    "    \n",
+    "    '''\n",
+    "    out_x = np.zeros(x.shape) # 2번 Tag의 facets entity에 속한 state variable DOFs랑 같은 크기의 배열 생성.\n",
+    "    out_x[0] = x[0] - a1[0] # \n",
     "    out_x[1] = x[1] - a1[1]\n",
     "    out_x[2] = x[2]\n",
     "    return out_x\n",
     "\n",
-    "\n",
+    "# 3번 Tag의 facets entity에 위치한 state variable의 DOFs를 기준으로 마주보는 하변에 위치한 state variable의 DOFs를 periodic하게 묶는 함수 정의.\n",
     "def periodic_relation_bottom_top(x):\n",
     "    out_x = np.zeros(x.shape)\n",
     "    out_x[0] = x[0] - a2[0]\n",
@@ -654,9 +668,9 @@
    "formats": "md:myst,ipynb"
   },
   "kernelspec": {
-   "display_name": "fenicsx-env",
+   "display_name": "Python (fenicsx-env)",
    "language": "python",
-   "name": "python3"
+   "name": "fenicsx-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -668,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.12"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
