--- a/periodic_bc/bcc_AH.ipynb
+++ b/periodic_bc/bcc_AH.ipynb
@@ -173,37 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "573932d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 3)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ufl.Identity(3).ufl_shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5fb47427",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdim = mesh.geometry.dim  # 3\n",
     "\n",
-    "i, j, k, l = ufl.indices(4)\n",
+    "i, j, k, l = ufl.indices(4) # 4개의 독립적인 인덱스 생성\n",
     "\n",
-    "I = ufl.Identity(gdim)\n",
+    "I = ufl.Identity(gdim) # 2nd-order identity tensor (Kronecker delta)\n",
     "\n",
     "# (I ⊗ I)_{ijkl} = δ_ij δ_kl\n",
     "I4 = ufl.as_tensor(I[i, j] * I[k, l], (i, j, k, l))\n",
@@ -232,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "48303f92",
    "metadata": {},
    "outputs": [],
